// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader tests renders properly 1`] = `
<styles__LoaderMessage>
  Test
</styles__LoaderMessage>
`;

exports[`Loader tests should render children 1`] = `
<styles__LoaderMessage>
  text
</styles__LoaderMessage>
`;

exports[`Loader tests should render default children 1`] = `
<styles__LoaderMessage>
  <MDSpinner
    color1="rgb(66, 165, 245)"
    color2="rgb(239, 83, 80)"
    color3="rgb(253, 216, 53)"
    color4="rgb(76, 175, 80)"
    duration={1333}
    singleColor="#fff"
    size={28}
  />
</styles__LoaderMessage>
`;
